--- a/index.css
+++ b/index.css
@@ -1,3 +1,63 @@
-#heading{
-    color: red;
+body{
+    background-color: #552e2e;
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+    background-color: grey;
+}
+.logo-container{
+    width: 20%;
+}
+.restname{
+    text-align: center;
+}
+.list-container > ul{
+    display: flex;
+    list-style-type: none;
+}
+.list-container > ul > li{
+    text-align: end;
+    padding: 5px;
+}
+#apple{
+    padding: 5px;
+    width: 10%;
+}
+#ico{
+    width: 20%;
+    margin-top: -20px;
+}
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+}
+.card {
+    width: 250px;
+    padding: 5px;
+    background-color: #A0A0A0;
+    margin: 5px;
+}
+.card:hover{
+    border: 2px solid black;
+    cursor: pointer;
+}
+.search{
+    padding: 10px;
+}
+.charger{
+    width: 100%;
+    height: 70%;
+}
+.shimmer{
+    display: flex;
+    flex-wrap: wrap;
+}
+.shimmercard {
+    width: 250px;
+    height: 400px;
+    padding: 5px;
+    background-color: #f0f0f0;
+    margin: 5px;
 }
